reading and writing EXIF headers in JPEG and TIFF images using PHP.

Copyright (C) 2004, 2005  Martin Geisler.
Licensed under the GNU GPL, see COPYING for details.


PEL Version 0.9  (Not released)
***********************************

Notes:

The API documentation was updated so as to clarify some confusion
about the use of PelEntry::newFromData(), and to detail the constrains
on format and number of components for each tag in PelTag.

Changes:

* Removed PelJpegContent::getSize() method.  Calling this method in
  the PelExif subclass resulted in an error, and overriding it
  correctly in PelExif would have required too much code to justify
  the effort.

* Better doc comments and small code cleanups in PelJpeg.php,
  PelExif.php, and PelIfd.php.

* PelEntry.php now unconditionally includes the class definitions of
  all the entry types.  The conditionally loading only worked when one
  created a new PelJpeg object, but not when one had stored such an
  object in, say, a session.

* Updated the documentation on PelEntry::newFromData() to indicate
  that one shouldn't use this method unless the data comes directly
  from an image.  The method signature was corrected with a type hint,
  so that $data really is a PelDataWindow.

* Updated the documentation in PelTag.  All tags now details their
  expected format and the expected number of components.  One can
  still freely choose to obey or disregard these constrains, but doing
  so will lead to non-compliant images.

* Updated the documentation in PelFormat with links to the PelEntry
  classes corresponding to each format.

* Updated the make-release.sh script to use a run-phpdoc.sh script for
  generating the API documentation.


PEL Version 0.8  February 18th 2005
***********************************

Notes:

Erroneous entries will now be skipped while loading instead of causing
a total abort.  The documentation was expanded with a short tutorial
and a FAQ.  New test images were added from Leica D-LUX, Olympos C50Z